--- a/Portfolio/navbar.css
+++ b/Portfolio/navbar.css
@@ -22,3 +22,14 @@
   margin: 20px;
   font-size: 20px;
 }
+
+.welcome-section {
+  color: orange;
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
